--- a/packages/demos/react-social/package.json
+++ b/packages/demos/react-social/package.json
@@ -10,6 +10,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "eqcss": "^1.7.0",
     "lodash": "^4.17.4",
     "postcss": "^5.2.13",
     "postcss-loader": "^2.0.6",
